WIP: Eliminate binding.model.api.GeneratedType
We have eliminated GeneratedTypeObject as the GeneratedType
specialization for generated classes and have migrated all possible
users to Archetype -- at this point a raw GeneratedType is only emitted
for InterfaceTemplate's use -- so there is a ton of semantics that we
carry around with 'GeneratedType', which is unused -- as evidenced by
all the deprecated methods in Archetype implementations.

This patch renames GeneratedType to LegacyArchetype and makes it extend
Archetype, with Archetype being the link to binding.model.api.Type.

All references are updated to reflect what they are referring to:
- Archetype if they mean 'a generated binding class'
- LegacyArchetype if they mean 'a generated binding interface' with all
  the GeneratedType semantics

This renders LegacyType.isAbstract() superfluous, as it necessarily
represents an interface, which is implicitly abstract.

JIRA: YANGTOOLS-1897
Change-Id: Iad3dd3152dce417dab616c66a6e3e5e238c2630b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>